eecs665/lab06/source/y.output
   0  $accept : prog $end

   1  prog : externs

   2  externs :
   3          | externs extern

   4  extern : dcl ';'
   5         | func

   6  dcls :
   7       | dcls dcl ';'

   8  dcl : type dclr
   9      | dcl ',' dclr

  10  dclr : ID
  11       | ID '[' ']'
  12       | ID '[' CON ']'

  13  type : CHAR
  14       | FLOAT
  15       | DOUBLE
  16       | INT

  17  func : fhead stmts '}'

  18  fhead : fname fargs '{' dcls

  19  fname : type ID
  20        | ID

  21  fargs : '(' ')'
  22        | '(' args ')'

  23  args : type dclr
  24       | args ',' type dclr

  25  bhead : '{'

  26  block : bhead dcls stmts '}'

  27  stmts :
  28        | stmts lblstmt

  29  lblstmt : b stmt
  30          | b labels stmt

  31  labels : ID ':'
  32         | labels ID ':'

  33  s :

  34  m :

  35  n :

  36  b :

  37  stmt : expr ';'
  38       | IF '(' cexpr ')' m lblstmt m
  39       | IF '(' cexpr ')' m lblstmt ELSE n m lblstmt m
  40       | WHILE '(' m cexpr ')' m s lblstmt n m
  41       | DO m s lblstmt WHILE '(' m cexpr ')' ';' m
  42       | FOR '(' expro ';' m cexpro ';' m expro n ')' m s lblstmt n m
  43       | CONTINUE ';'
  44       | BREAK ';'
  45       | GOTO ID ';'
  46       | RETURN ';'
  47       | RETURN expr ';'
  48       | block
  49       | ';'

  50  cexpro :
  51         | cexpr

  52  cexpr : expr EQ expr
  53        | expr NE expr
  54        | expr LE expr
  55        | expr GE expr
  56        | expr LT expr
  57        | expr GT expr
  58        | cexpr AND m cexpr
  59        | cexpr OR m cexpr
  60        | NOT cexpr
  61        | expr

  62  exprs : expr
  63        | exprs ',' expr

  64  expro :
  65        | expr

  66  expr : lval SET expr
  67       | lval SETOR expr
  68       | lval SETXOR expr
  69       | lval SETAND expr
  70       | lval SETLSH expr
  71       | lval SETRSH expr
  72       | lval SETADD expr
  73       | lval SETSUB expr
  74       | lval SETMUL expr
  75       | lval SETDIV expr
  76       | lval SETMOD expr
  77       | expr BITOR expr
  78       | expr BITXOR expr
  79       | expr BITAND expr
  80       | expr LSH expr
  81       | expr RSH expr
  82       | expr ADD expr
  83       | expr SUB expr
  84       | expr MUL expr
  85       | expr DIV expr
  86       | expr MOD expr
  87       | BITAND lval
  88       | SUB expr
  89       | COM expr
  90       | lval
  91       | ID '(' ')'
  92       | ID '(' exprs ')'
  93       | '(' expr ')'
  94       | CON
  95       | STR

  96  lval : ID
  97       | ID '[' expr ']'

state 0
	$accept : . prog $end  (0)
	externs : .  (2)

	.  reduce 2

	prog  goto 1
	externs  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : externs .  (1)
	externs : externs . extern  (3)

	ID  shift 3
	CHAR  shift 4
	FLOAT  shift 5
	DOUBLE  shift 6
	INT  shift 7
	$end  reduce 1

	dcl  goto 8
	fname  goto 9
	type  goto 10
	extern  goto 11
	func  goto 12
	fhead  goto 13


state 3
	fname : ID .  (20)

	.  reduce 20


state 4
	type : CHAR .  (13)

	.  reduce 13


state 5
	type : FLOAT .  (14)

	.  reduce 14


state 6
	type : DOUBLE .  (15)

	.  reduce 15


state 7
	type : INT .  (16)

	.  reduce 16


state 8
	extern : dcl . ';'  (4)
	dcl : dcl . ',' dclr  (9)

	';'  shift 14
	','  shift 15
	.  error


state 9
	fhead : fname . fargs '{' dcls  (18)

	'('  shift 16
	.  error

	fargs  goto 17


state 10
	dcl : type . dclr  (8)
	fname : type . ID  (19)

	ID  shift 18
	.  error

	dclr  goto 19


state 11
	externs : externs extern .  (3)

	.  reduce 3


state 12
	extern : func .  (5)

	.  reduce 5


state 13
	func : fhead . stmts '}'  (17)
	stmts : .  (27)

	.  reduce 27

	stmts  goto 20


state 14
	extern : dcl ';' .  (4)

	.  reduce 4


state 15
	dcl : dcl ',' . dclr  (9)

	ID  shift 21
	.  error

	dclr  goto 22


state 16
	fargs : '(' . ')'  (21)
	fargs : '(' . args ')'  (22)

	CHAR  shift 4
	FLOAT  shift 5
	DOUBLE  shift 6
	INT  shift 7
	')'  shift 23
	.  error

	type  goto 24
	args  goto 25


state 17
	fhead : fname fargs . '{' dcls  (18)

	'{'  shift 26
	.  error


state 18
	dclr : ID .  (10)
	dclr : ID . '[' ']'  (11)
	dclr : ID . '[' CON ']'  (12)
	fname : type ID .  (19)

	'['  shift 27
	';'  reduce 10
	','  reduce 10
	'('  reduce 19


state 19
	dcl : type dclr .  (8)

	.  reduce 8


state 20
	func : fhead stmts . '}'  (17)
	stmts : stmts . lblstmt  (28)
	b : .  (36)

	'}'  shift 28
	ID  reduce 36
	CON  reduce 36
	STR  reduce 36
	FOR  reduce 36
	IF  reduce 36
	RETURN  reduce 36
	WHILE  reduce 36
	DO  reduce 36
	CONTINUE  reduce 36
	BREAK  reduce 36
	GOTO  reduce 36
	BITAND  reduce 36
	SUB  reduce 36
	COM  reduce 36
	';'  reduce 36
	'{'  reduce 36
	'('  reduce 36

	lblstmt  goto 29
	b  goto 30


state 21
	dclr : ID .  (10)
	dclr : ID . '[' ']'  (11)
	dclr : ID . '[' CON ']'  (12)

	'['  shift 27
	';'  reduce 10
	','  reduce 10
	')'  reduce 10


state 22
	dcl : dcl ',' dclr .  (9)

	.  reduce 9


state 23
	fargs : '(' ')' .  (21)

	.  reduce 21


state 24
	args : type . dclr  (23)

	ID  shift 21
	.  error

	dclr  goto 31


state 25
	fargs : '(' args . ')'  (22)
	args : args . ',' type dclr  (24)

	','  shift 32
	')'  shift 33
	.  error


state 26
	fhead : fname fargs '{' . dcls  (18)
	dcls : .  (6)

	.  reduce 6

	dcls  goto 34


state 27
	dclr : ID '[' . ']'  (11)
	dclr : ID '[' . CON ']'  (12)

	CON  shift 35
	']'  shift 36
	.  error


state 28
	func : fhead stmts '}' .  (17)

	.  reduce 17


state 29
	stmts : stmts lblstmt .  (28)

	.  reduce 28


state 30
	lblstmt : b . stmt  (29)
	lblstmt : b . labels stmt  (30)

	ID  shift 37
	CON  shift 38
	STR  shift 39
	FOR  shift 40
	IF  shift 41
	RETURN  shift 42
	WHILE  shift 43
	DO  shift 44
	CONTINUE  shift 45
	BREAK  shift 46
	GOTO  shift 47
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	';'  shift 51
	'{'  shift 52
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 55
	bhead  goto 56
	block  goto 57
	stmt  goto 58
	labels  goto 59


state 31
	args : type dclr .  (23)

	.  reduce 23


state 32
	args : args ',' . type dclr  (24)

	CHAR  shift 4
	FLOAT  shift 5
	DOUBLE  shift 6
	INT  shift 7
	.  error

	type  goto 60


state 33
	fargs : '(' args ')' .  (22)

	.  reduce 22


state 34
	dcls : dcls . dcl ';'  (7)
	fhead : fname fargs '{' dcls .  (18)

	CHAR  shift 4
	FLOAT  shift 5
	DOUBLE  shift 6
	INT  shift 7
	ID  reduce 18
	CON  reduce 18
	STR  reduce 18
	FOR  reduce 18
	IF  reduce 18
	RETURN  reduce 18
	WHILE  reduce 18
	DO  reduce 18
	CONTINUE  reduce 18
	BREAK  reduce 18
	GOTO  reduce 18
	BITAND  reduce 18
	SUB  reduce 18
	COM  reduce 18
	';'  reduce 18
	'}'  reduce 18
	'{'  reduce 18
	'('  reduce 18

	dcl  goto 61
	type  goto 62


state 35
	dclr : ID '[' CON . ']'  (12)

	']'  shift 63
	.  error


state 36
	dclr : ID '[' ']' .  (11)

	.  reduce 11


state 37
	labels : ID . ':'  (31)
	expr : ID . '(' ')'  (91)
	expr : ID . '(' exprs ')'  (92)
	lval : ID .  (96)
	lval : ID . '[' expr ']'  (97)

	'['  shift 64
	'('  shift 65
	':'  shift 66
	SET  reduce 96
	SETOR  reduce 96
	SETXOR  reduce 96
	SETAND  reduce 96
	SETLSH  reduce 96
	SETRSH  reduce 96
	SETADD  reduce 96
	SETSUB  reduce 96
	SETMUL  reduce 96
	SETDIV  reduce 96
	SETMOD  reduce 96
	BITOR  reduce 96
	BITXOR  reduce 96
	BITAND  reduce 96
	LSH  reduce 96
	RSH  reduce 96
	ADD  reduce 96
	SUB  reduce 96
	MUL  reduce 96
	DIV  reduce 96
	MOD  reduce 96
	';'  reduce 96


state 38
	expr : CON .  (94)

	.  reduce 94


state 39
	expr : STR .  (95)

	.  reduce 95


state 40
	stmt : FOR . '(' expro ';' m cexpro ';' m expro n ')' m s lblstmt n m  (42)

	'('  shift 67
	.  error


state 41
	stmt : IF . '(' cexpr ')' m lblstmt m  (38)
	stmt : IF . '(' cexpr ')' m lblstmt ELSE n m lblstmt m  (39)

	'('  shift 68
	.  error


state 42
	stmt : RETURN . ';'  (46)
	stmt : RETURN . expr ';'  (47)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	';'  shift 70
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 71


state 43
	stmt : WHILE . '(' m cexpr ')' m s lblstmt n m  (40)

	'('  shift 72
	.  error


state 44
	stmt : DO . m s lblstmt WHILE '(' m cexpr ')' ';' m  (41)
	m : .  (34)

	.  reduce 34

	m  goto 73


state 45
	stmt : CONTINUE . ';'  (43)

	';'  shift 74
	.  error


state 46
	stmt : BREAK . ';'  (44)

	';'  shift 75
	.  error


state 47
	stmt : GOTO . ID ';'  (45)

	ID  shift 76
	.  error


state 48
	expr : BITAND . lval  (87)

	ID  shift 77
	.  error

	lval  goto 78


state 49
	expr : SUB . expr  (88)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 79


state 50
	expr : COM . expr  (89)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 80


state 51
	stmt : ';' .  (49)

	.  reduce 49


state 52
	bhead : '{' .  (25)

	.  reduce 25


state 53
	expr : '(' . expr ')'  (93)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 81


state 54
	expr : lval . SET expr  (66)
	expr : lval . SETOR expr  (67)
	expr : lval . SETXOR expr  (68)
	expr : lval . SETAND expr  (69)
	expr : lval . SETLSH expr  (70)
	expr : lval . SETRSH expr  (71)
	expr : lval . SETADD expr  (72)
	expr : lval . SETSUB expr  (73)
	expr : lval . SETMUL expr  (74)
	expr : lval . SETDIV expr  (75)
	expr : lval . SETMOD expr  (76)
	expr : lval .  (90)

	SET  shift 82
	SETOR  shift 83
	SETXOR  shift 84
	SETAND  shift 85
	SETLSH  shift 86
	SETRSH  shift 87
	SETADD  shift 88
	SETSUB  shift 89
	SETMUL  shift 90
	SETDIV  shift 91
	SETMOD  shift 92
	OR  reduce 90
	AND  reduce 90
	BITOR  reduce 90
	BITXOR  reduce 90
	BITAND  reduce 90
	EQ  reduce 90
	NE  reduce 90
	GT  reduce 90
	GE  reduce 90
	LT  reduce 90
	LE  reduce 90
	LSH  reduce 90
	RSH  reduce 90
	ADD  reduce 90
	SUB  reduce 90
	MUL  reduce 90
	DIV  reduce 90
	MOD  reduce 90
	';'  reduce 90
	','  reduce 90
	']'  reduce 90
	')'  reduce 90


state 55
	stmt : expr . ';'  (37)
	expr : expr . BITOR expr  (77)
	expr : expr . BITXOR expr  (78)
	expr : expr . BITAND expr  (79)
	expr : expr . LSH expr  (80)
	expr : expr . RSH expr  (81)
	expr : expr . ADD expr  (82)
	expr : expr . SUB expr  (83)
	expr : expr . MUL expr  (84)
	expr : expr . DIV expr  (85)
	expr : expr . MOD expr  (86)

	BITOR  shift 93
	BITXOR  shift 94
	BITAND  shift 95
	LSH  shift 96
	RSH  shift 97
	ADD  shift 98
	SUB  shift 99
	MUL  shift 100
	DIV  shift 101
	MOD  shift 102
	';'  shift 103
	.  error


state 56
	block : bhead . dcls stmts '}'  (26)
	dcls : .  (6)

	.  reduce 6

	dcls  goto 104


state 57
	stmt : block .  (48)

	.  reduce 48


state 58
	lblstmt : b stmt .  (29)

	.  reduce 29


state 59
	lblstmt : b labels . stmt  (30)
	labels : labels . ID ':'  (32)

	ID  shift 105
	CON  shift 38
	STR  shift 39
	FOR  shift 40
	IF  shift 41
	RETURN  shift 42
	WHILE  shift 43
	DO  shift 44
	CONTINUE  shift 45
	BREAK  shift 46
	GOTO  shift 47
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	';'  shift 51
	'{'  shift 52
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 55
	bhead  goto 56
	block  goto 57
	stmt  goto 106


state 60
	args : args ',' type . dclr  (24)

	ID  shift 21
	.  error

	dclr  goto 107


state 61
	dcls : dcls dcl . ';'  (7)
	dcl : dcl . ',' dclr  (9)

	';'  shift 108
	','  shift 15
	.  error


state 62
	dcl : type . dclr  (8)

	ID  shift 21
	.  error

	dclr  goto 19


state 63
	dclr : ID '[' CON ']' .  (12)

	.  reduce 12


state 64
	lval : ID '[' . expr ']'  (97)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 109


state 65
	expr : ID '(' . ')'  (91)
	expr : ID '(' . exprs ')'  (92)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	')'  shift 110
	.  error

	lval  goto 54
	expr  goto 111
	exprs  goto 112


state 66
	labels : ID ':' .  (31)

	.  reduce 31


state 67
	stmt : FOR '(' . expro ';' m cexpro ';' m expro n ')' m s lblstmt n m  (42)
	expro : .  (64)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	';'  reduce 64

	lval  goto 54
	expr  goto 113
	expro  goto 114


state 68
	stmt : IF '(' . cexpr ')' m lblstmt m  (38)
	stmt : IF '(' . cexpr ')' m lblstmt ELSE n m lblstmt m  (39)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	NOT  shift 115
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 116
	cexpr  goto 117


state 69
	expr : ID . '(' ')'  (91)
	expr : ID . '(' exprs ')'  (92)
	lval : ID .  (96)
	lval : ID . '[' expr ']'  (97)

	'['  shift 64
	'('  shift 65
	SET  reduce 96
	SETOR  reduce 96
	SETXOR  reduce 96
	SETAND  reduce 96
	SETLSH  reduce 96
	SETRSH  reduce 96
	SETADD  reduce 96
	SETSUB  reduce 96
	SETMUL  reduce 96
	SETDIV  reduce 96
	SETMOD  reduce 96
	OR  reduce 96
	AND  reduce 96
	BITOR  reduce 96
	BITXOR  reduce 96
	BITAND  reduce 96
	EQ  reduce 96
	NE  reduce 96
	GT  reduce 96
	GE  reduce 96
	LT  reduce 96
	LE  reduce 96
	LSH  reduce 96
	RSH  reduce 96
	ADD  reduce 96
	SUB  reduce 96
	MUL  reduce 96
	DIV  reduce 96
	MOD  reduce 96
	';'  reduce 96
	','  reduce 96
	']'  reduce 96
	')'  reduce 96


state 70
	stmt : RETURN ';' .  (46)

	.  reduce 46


state 71
	stmt : RETURN expr . ';'  (47)
	expr : expr . BITOR expr  (77)
	expr : expr . BITXOR expr  (78)
	expr : expr . BITAND expr  (79)
	expr : expr . LSH expr  (80)
	expr : expr . RSH expr  (81)
	expr : expr . ADD expr  (82)
	expr : expr . SUB expr  (83)
	expr : expr . MUL expr  (84)
	expr : expr . DIV expr  (85)
	expr : expr . MOD expr  (86)

	BITOR  shift 93
	BITXOR  shift 94
	BITAND  shift 95
	LSH  shift 96
	RSH  shift 97
	ADD  shift 98
	SUB  shift 99
	MUL  shift 100
	DIV  shift 101
	MOD  shift 102
	';'  shift 118
	.  error


state 72
	stmt : WHILE '(' . m cexpr ')' m s lblstmt n m  (40)
	m : .  (34)

	.  reduce 34

	m  goto 119


state 73
	stmt : DO m . s lblstmt WHILE '(' m cexpr ')' ';' m  (41)
	s : .  (33)

	.  reduce 33

	s  goto 120


state 74
	stmt : CONTINUE ';' .  (43)

	.  reduce 43


state 75
	stmt : BREAK ';' .  (44)

	.  reduce 44


state 76
	stmt : GOTO ID . ';'  (45)

	';'  shift 121
	.  error


state 77
	lval : ID .  (96)
	lval : ID . '[' expr ']'  (97)

	'['  shift 64
	OR  reduce 96
	AND  reduce 96
	BITOR  reduce 96
	BITXOR  reduce 96
	BITAND  reduce 96
	EQ  reduce 96
	NE  reduce 96
	GT  reduce 96
	GE  reduce 96
	LT  reduce 96
	LE  reduce 96
	LSH  reduce 96
	RSH  reduce 96
	ADD  reduce 96
	SUB  reduce 96
	MUL  reduce 96
	DIV  reduce 96
	MOD  reduce 96
	';'  reduce 96
	','  reduce 96
	']'  reduce 96
	')'  reduce 96


state 78
	expr : BITAND lval .  (87)

	.  reduce 87


state 79
	expr : expr . BITOR expr  (77)
	expr : expr . BITXOR expr  (78)
	expr : expr . BITAND expr  (79)
	expr : expr . LSH expr  (80)
	expr : expr . RSH expr  (81)
	expr : expr . ADD expr  (82)
	expr : expr . SUB expr  (83)
	expr : expr . MUL expr  (84)
	expr : expr . DIV expr  (85)
	expr : expr . MOD expr  (86)
	expr : SUB expr .  (88)

	.  reduce 88


state 80
	expr : expr . BITOR expr  (77)
	expr : expr . BITXOR expr  (78)
	expr : expr . BITAND expr  (79)
	expr : expr . LSH expr  (80)
	expr : expr . RSH expr  (81)
	expr : expr . ADD expr  (82)
	expr : expr . SUB expr  (83)
	expr : expr . MUL expr  (84)
	expr : expr . DIV expr  (85)
	expr : expr . MOD expr  (86)
	expr : COM expr .  (89)

	.  reduce 89


state 81
	expr : expr . BITOR expr  (77)
	expr : expr . BITXOR expr  (78)
	expr : expr . BITAND expr  (79)
	expr : expr . LSH expr  (80)
	expr : expr . RSH expr  (81)
	expr : expr . ADD expr  (82)
	expr : expr . SUB expr  (83)
	expr : expr . MUL expr  (84)
	expr : expr . DIV expr  (85)
	expr : expr . MOD expr  (86)
	expr : '(' expr . ')'  (93)

	BITOR  shift 93
	BITXOR  shift 94
	BITAND  shift 95
	LSH  shift 96
	RSH  shift 97
	ADD  shift 98
	SUB  shift 99
	MUL  shift 100
	DIV  shift 101
	MOD  shift 102
	')'  shift 122
	.  error


state 82
	expr : lval SET . expr  (66)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 123


state 83
	expr : lval SETOR . expr  (67)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 124


state 84
	expr : lval SETXOR . expr  (68)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 125


state 85
	expr : lval SETAND . expr  (69)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 126


state 86
	expr : lval SETLSH . expr  (70)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 127


state 87
	expr : lval SETRSH . expr  (71)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 128


state 88
	expr : lval SETADD . expr  (72)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 129


state 89
	expr : lval SETSUB . expr  (73)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 130


state 90
	expr : lval SETMUL . expr  (74)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 131


state 91
	expr : lval SETDIV . expr  (75)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 132


state 92
	expr : lval SETMOD . expr  (76)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 133


state 93
	expr : expr BITOR . expr  (77)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 134


state 94
	expr : expr BITXOR . expr  (78)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 135


state 95
	expr : expr BITAND . expr  (79)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 136


state 96
	expr : expr LSH . expr  (80)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 137


state 97
	expr : expr RSH . expr  (81)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 138


state 98
	expr : expr ADD . expr  (82)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 139


state 99
	expr : expr SUB . expr  (83)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 140


state 100
	expr : expr MUL . expr  (84)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 141


state 101
	expr : expr DIV . expr  (85)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 142


state 102
	expr : expr MOD . expr  (86)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 143


state 103
	stmt : expr ';' .  (37)

	.  reduce 37


state 104
	dcls : dcls . dcl ';'  (7)
	block : bhead dcls . stmts '}'  (26)
	stmts : .  (27)

	CHAR  shift 4
	FLOAT  shift 5
	DOUBLE  shift 6
	INT  shift 7
	ID  reduce 27
	CON  reduce 27
	STR  reduce 27
	FOR  reduce 27
	IF  reduce 27
	RETURN  reduce 27
	WHILE  reduce 27
	DO  reduce 27
	CONTINUE  reduce 27
	BREAK  reduce 27
	GOTO  reduce 27
	BITAND  reduce 27
	SUB  reduce 27
	COM  reduce 27
	';'  reduce 27
	'}'  reduce 27
	'{'  reduce 27
	'('  reduce 27

	dcl  goto 61
	type  goto 62
	stmts  goto 144


state 105
	labels : labels ID . ':'  (32)
	expr : ID . '(' ')'  (91)
	expr : ID . '(' exprs ')'  (92)
	lval : ID .  (96)
	lval : ID . '[' expr ']'  (97)

	'['  shift 64
	'('  shift 65
	':'  shift 145
	SET  reduce 96
	SETOR  reduce 96
	SETXOR  reduce 96
	SETAND  reduce 96
	SETLSH  reduce 96
	SETRSH  reduce 96
	SETADD  reduce 96
	SETSUB  reduce 96
	SETMUL  reduce 96
	SETDIV  reduce 96
	SETMOD  reduce 96
	BITOR  reduce 96
	BITXOR  reduce 96
	BITAND  reduce 96
	LSH  reduce 96
	RSH  reduce 96
	ADD  reduce 96
	SUB  reduce 96
	MUL  reduce 96
	DIV  reduce 96
	MOD  reduce 96
	';'  reduce 96


state 106
	lblstmt : b labels stmt .  (30)

	.  reduce 30


state 107
	args : args ',' type dclr .  (24)

	.  reduce 24


state 108
	dcls : dcls dcl ';' .  (7)

	.  reduce 7


state 109
	expr : expr . BITOR expr  (77)
	expr : expr . BITXOR expr  (78)
	expr : expr . BITAND expr  (79)
	expr : expr . LSH expr  (80)
	expr : expr . RSH expr  (81)
	expr : expr . ADD expr  (82)
	expr : expr . SUB expr  (83)
	expr : expr . MUL expr  (84)
	expr : expr . DIV expr  (85)
	expr : expr . MOD expr  (86)
	lval : ID '[' expr . ']'  (97)

	BITOR  shift 93
	BITXOR  shift 94
	BITAND  shift 95
	LSH  shift 96
	RSH  shift 97
	ADD  shift 98
	SUB  shift 99
	MUL  shift 100
	DIV  shift 101
	MOD  shift 102
	']'  shift 146
	.  error


state 110
	expr : ID '(' ')' .  (91)

	.  reduce 91


state 111
	exprs : expr .  (62)
	expr : expr . BITOR expr  (77)
	expr : expr . BITXOR expr  (78)
	expr : expr . BITAND expr  (79)
	expr : expr . LSH expr  (80)
	expr : expr . RSH expr  (81)
	expr : expr . ADD expr  (82)
	expr : expr . SUB expr  (83)
	expr : expr . MUL expr  (84)
	expr : expr . DIV expr  (85)
	expr : expr . MOD expr  (86)

	BITOR  shift 93
	BITXOR  shift 94
	BITAND  shift 95
	LSH  shift 96
	RSH  shift 97
	ADD  shift 98
	SUB  shift 99
	MUL  shift 100
	DIV  shift 101
	MOD  shift 102
	','  reduce 62
	')'  reduce 62


state 112
	exprs : exprs . ',' expr  (63)
	expr : ID '(' exprs . ')'  (92)

	','  shift 147
	')'  shift 148
	.  error


state 113
	expro : expr .  (65)
	expr : expr . BITOR expr  (77)
	expr : expr . BITXOR expr  (78)
	expr : expr . BITAND expr  (79)
	expr : expr . LSH expr  (80)
	expr : expr . RSH expr  (81)
	expr : expr . ADD expr  (82)
	expr : expr . SUB expr  (83)
	expr : expr . MUL expr  (84)
	expr : expr . DIV expr  (85)
	expr : expr . MOD expr  (86)

	BITOR  shift 93
	BITXOR  shift 94
	BITAND  shift 95
	LSH  shift 96
	RSH  shift 97
	ADD  shift 98
	SUB  shift 99
	MUL  shift 100
	DIV  shift 101
	MOD  shift 102
	';'  reduce 65
	')'  reduce 65


state 114
	stmt : FOR '(' expro . ';' m cexpro ';' m expro n ')' m s lblstmt n m  (42)

	';'  shift 149
	.  error


state 115
	cexpr : NOT . cexpr  (60)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	NOT  shift 115
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 116
	cexpr  goto 150


state 116
	cexpr : expr . EQ expr  (52)
	cexpr : expr . NE expr  (53)
	cexpr : expr . LE expr  (54)
	cexpr : expr . GE expr  (55)
	cexpr : expr . LT expr  (56)
	cexpr : expr . GT expr  (57)
	cexpr : expr .  (61)
	expr : expr . BITOR expr  (77)
	expr : expr . BITXOR expr  (78)
	expr : expr . BITAND expr  (79)
	expr : expr . LSH expr  (80)
	expr : expr . RSH expr  (81)
	expr : expr . ADD expr  (82)
	expr : expr . SUB expr  (83)
	expr : expr . MUL expr  (84)
	expr : expr . DIV expr  (85)
	expr : expr . MOD expr  (86)

	BITOR  shift 93
	BITXOR  shift 94
	BITAND  shift 95
	EQ  shift 151
	NE  shift 152
	GT  shift 153
	GE  shift 154
	LT  shift 155
	LE  shift 156
	LSH  shift 96
	RSH  shift 97
	ADD  shift 98
	SUB  shift 99
	MUL  shift 100
	DIV  shift 101
	MOD  shift 102
	OR  reduce 61
	AND  reduce 61
	';'  reduce 61
	')'  reduce 61


state 117
	stmt : IF '(' cexpr . ')' m lblstmt m  (38)
	stmt : IF '(' cexpr . ')' m lblstmt ELSE n m lblstmt m  (39)
	cexpr : cexpr . AND m cexpr  (58)
	cexpr : cexpr . OR m cexpr  (59)

	OR  shift 157
	AND  shift 158
	')'  shift 159
	.  error


state 118
	stmt : RETURN expr ';' .  (47)

	.  reduce 47


state 119
	stmt : WHILE '(' m . cexpr ')' m s lblstmt n m  (40)

	ID  shift 69
	CON  shift 38
	STR  shift 39
	BITAND  shift 48
	SUB  shift 49
	NOT  shift 115
	COM  shift 50
	'('  shift 53
	.  error

	lval  goto 54
	expr  goto 116
	cexpr  goto 160

